--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "karimiariqn"
 description: "ngedit + tokupens + belajar web + nyatir + turu"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: /jekyll-theme-memoirs
+baseurl: 
 google_analytics: 'UA-xxxxxxxx-1'
 disqus: 'demowebsite'
 mailchimp-list: 
