--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ email: mail@karimiariqn.my.id
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    avatar: 'assets/images/avatar-sal.png'
+  Karimi:
+    name: Karimi
+    display_name: Karimi
+    avatar: 'assets/images/avatar-Karimi.png'
     email: karimiariqnadindra@gmail.com
     web: https://karimiariqn.my.id
     twitter: https://twitter.com/karimiariqn
