--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "karimiariqn"
 title: "karimiariqn"
-description: "ngedit foto + desain + belajar web + nyatir + turu"
+description: "ngedit foto + desain + belajar web + nyatir + turu = repeat brutal"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: 
