--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: "karimiariqn"
-title: "karimiariqn"
+title: "seputar coding & editing"
 description: "ngedit foto + desain + belajar web + nyatir + turu = repeat brutal"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
