--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ authors:
     avatar: 'assets/images/avatar-karimi.png'
     email: karimiariqnadindra@gmail.com
     web: https://karimiariqn.my.id
-    twitter: https://twitter.com/karimiariqn
+    twitter: - 
     description: "beliau ini kocak gaming"
 
 
