--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "karimiariqn"
 title: "seputar coding & editing"
-description: "ngedit foto + desain + belajar web + nyatir + turu, repeat"
+description: "All About 2D Graph & Motion Editing "
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ""
